Align page contents to center and fixed misaligned items and wordings

--- a/public/static/styles.css
+++ b/public/static/styles.css
@@ -1,14 +1,6 @@
-p {
-  font-size: 16px;
-}
-
 .card a {
   text-decoration: none !important;
   color: inherit !important;
-}
-
-.container {
-  position: relative;
 }
 
 #new-post-btn {
@@ -40,7 +32,14 @@ span.mandatory, span.asteriskField {
 
 /* General styling */
 body {
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
   background-color: #e8ebe8 !important;
+}
+
+p {
+  font-size: 16px;
 }
 
 input:focus {
@@ -63,6 +62,13 @@ input:focus {
 
 .button:hover {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.06);
+}
+
+.container {
+  position: relative;
+  flex-grow: 1;
+  display: flex;
+  flex-flow: column;
 }
 
 /* Navbar styling */
@@ -132,9 +138,15 @@ input:focus {
 
 @media screen and (min-width: 600px) {
   #login {
-    padding: 0 10vw;
+    width: 100%;
+    margin: 0;
     flex-flow: row;
     justify-content: space-around;
+    /* Centers the element in the container */
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(0, -50%);
   }
 
   .vibe-intro {
@@ -191,9 +203,6 @@ input:focus {
 }
 
 /* 404 Page Styling */
-#error-card {
-  padding: 0.5em;
-}
 #error-card section {
   display: flex;
   flex-direction: column;
@@ -207,6 +216,11 @@ input:focus {
 @media screen and (min-width: 600px) {
   #error-card {
     padding: 0 20%;
+    /* Centers the element in the container */
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(0, -50%);
   }
   #error-card * {
     text-align: center;
